src/test/deca/context/extension/invalid/TAB_access5.deca
{
    int[] a = new int[5];
    a[1.1f];
}